test_suite/tests/ui/duplicate-attribute/rename-ser-rename.stderr
error: duplicate serde attribute `rename`
 --> tests/ui/duplicate-attribute/rename-ser-rename.rs:6:13
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
...
6 |     #[serde(rename = "y")]
  |             ^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
